# Restaurant_Booking

backend/: .env  agent.py  config.py  database.py  main.py  models.py  pyproject.toml
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatWidget.tsx  FoodDecorations.tsx  Navbar.tsx
frontend/src/pages/: Home.tsx  RestaurantDashboard.tsx  UserBooking.tsx
